# alloy

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindClangd.cmake
include/: INode.h  ITransfersContainer.h
scripts/testnet/: alloy.address  start-add-alloyd.sh  start-alloyd.sh  start-create-wallet.sh  start-getbalance-alloy.sh  start-getbalance.sh  start-miner.sh  start-simplewallet.sh  start-walletd.sh  test.address  test.wallet  testd.wallet
src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
src/BlockchainExplorer/: BlockchainExplorer.cpp
src/Common/: Base58.cpp  JsonValue.cpp  JsonValue.h  Util.cpp  int-util.h
src/CryptoNoteCore/: Account.h  BlockValidationErrors.h  CachedBlock.cpp  CachedTransaction.cpp  CryptoNoteBasic.cpp  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteTools.h  Currency.h  DataBaseConfig.cpp  DatabaseBlockchainCache.cpp  Difficulty.cpp  Difficulty.h  MemoryBlockchainStorage.cpp  Miner.cpp  Transaction.cpp  TransactionPool.h  TransactionPoolCleaner.cpp  TransactionPoolCleaner.h  TransactionUtils.cpp  TransactionValidatiorState.h  UpgradeDetector.h  UpgradeManager.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp
src/HTTP/: HttpParser.cpp
src/InProcessNode/: InProcessNode.cpp
src/Miner/: Miner.cpp  MinerManager.cpp  MiningConfig.cpp
src/P2p/: ConnectionContext.h  NetNode.cpp  NetNodeConfig.cpp  P2pContext.h  P2pNodeConfig.cpp  P2pProtocolDefinitions.h  PeerListManager.h
src/PaymentGate/: WalletService.cpp
src/PaymentGateService/: ConfigurationManager.cpp  main.cpp
src/Platform/Arm/: README.md
src/Platform/Windows/System/: Dispatcher.cpp  Ipv4Resolver.cpp  TcpConnection.cpp  TcpConnector.cpp  TcpListener.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  RpcServerConfig.cpp
src/Serialization/: JsonOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.cpp
src/SimpleWallet/: PasswordContainer.cpp  SimpleWallet.cpp
src/Transfers/: BlockchainSynchronizer.cpp  IBlockchainSynchronizer.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.h
src/Wallet/: WalletGreen.cpp  WalletIndices.h  WalletRpcServer.cpp  WalletRpcServerCommandsDefinitions.h  WalletSerializationV1.h  WalletUtils.cpp
src/WalletLegacy/: KeysStorage.h  WalletHelper.h  WalletLegacySerializer.h  WalletTransactionSender.cpp  WalletUnconfirmedTransactions.h  WalletUserTransactionsCache.h
src/crypto/: chacha8.c  slow-hash.cpp
tests/: CMakeLists.txt  HashTarget.cpp
tests/CoreTests/: BlockValidation.cpp  ChaingenMain.cpp  CryptoNoteBoostSerialization.h  TestGenerator.h  UnorderedContainersBoostSerialization.h
tests/Crypto/: crypto-ops.c  crypto.cpp  hash.c  main.cpp  random.c
tests/Difficulty/: Difficulty.cpp
tests/Hash/: main.cpp
tests/PerformanceTests/: CheckRingSignature.h  CryptoNoteSlowHash.h  DerivePublicKey.h  DeriveSecretKey.h  GenerateKeyDerivation.h  GenerateKeyImage.h  MultiTransactionTestBase.h  SingleTransactionTestBase.h
tests/System/: OperationTimeoutTests.cpp  TimerTests.cpp
tests/TestGenerator/: TestGenerator.h
tests/UnitTests/: Chacha8.cpp  INodeStubs.cpp  SerializationKV.cpp  Shuffle.cpp  TestBcS.cpp  TestBlockchainCache.cpp  TestBlockchainGenerator.h  TestBlockchainStorage.cpp  TestCurrency.cpp  TestDatabaseBlockchainCache.cpp  TestFileMappedVector.cpp  TestFormatUtils.cpp  TestTransfersConsumer.cpp  TestTransfersContainer.cpp  TestTransfersContainerKeyImage.cpp  TestWallet.cpp  TestWalletLegacy.cpp  TransactionApi.cpp  TransactionApiHelpers.h
tests/crypto/: crypto-ops-data.c  crypto-tests.h
